Fixed Age spacing

--- a/style.css
+++ b/style.css
@@ -609,4 +609,7 @@ footer {
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   margin-top: var(--bs-gutter-y);
 }
+.age {
+	margin-top: -13px;
+}
   }
